[package]
name = "markovish"
version = "0.1.3"
authors = ["Emil Jonathan Eriksson <github.com/ginger51011>"]
edition = "2021"
description = "Simple Markov chain implementation for text generation"
keywords = ["parsing", "text", "language"]
categories = ["text-processing"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/ginger51011/markovish/"

[dependencies]
rand = { version = "0.8" }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
unicode-segmentation = "1.11"
itertools = "0.12"
rand_distr = "0.4"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["inline-more"]
inline-more = ["hashbrown/inline-more"]
serde = ["dep:serde", "hashbrown/serde"]

