[package]
name = "markovish"
version = "0.2.0"
authors = ["Emil Jonathan Eriksson <github.com/ginger51011>"]
edition = "2021"
description = "Simple Markov chain implementation for text generation"
keywords = ["parsing", "text", "language"]
categories = ["text-processing"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/ginger51011/markovish/"

[dependencies]
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
itertools = "0.13"
rand_distr = "0.4"
rand = { version = "0.8" }
serde = { version = "1.0", optional = true, features = ["derive"] }
unicode-segmentation = "1.11"

[features]
default = ["inline-more"]
inline-more = ["hashbrown/inline-more"]
serde = ["dep:serde", "hashbrown/serde", "rand_distr/serde1"]

